version/0.7/_sources/examples/gallery_examples/01_tips_n_tricks/example_01_run_python_script_output.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01_tips_n_tricks/example_01_run_python_script_output.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01_tips_n_tricks_example_01_run_python_script_output.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01_tips_n_tricks_example_01_run_python_script_output.py:

.. _ref_example_01_run_python_script_output:

Output to different formats
--------------------------------

This example calls the ``run_python_script`` method and gets the output in string,
JSON, and CSV formats.

.. GENERATED FROM PYTHON SOURCE LINES 12-17

Launch Mechanical
~~~~~~~~~~~~~~~~~
Launch a new Mechanical session in batch, setting ``cleanup_on_exit`` to
``False``. To close this Mechanical session when finished, this example
must call  the ``mechanical.exit()`` method.

.. GENERATED FROM PYTHON SOURCE LINES 17-25

.. code-block:: default


    import json

    from ansys.mechanical.core import launch_mechanical

    mechanical = launch_mechanical(batch=True, cleanup_on_exit=False)
    print(mechanical)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Ansys Mechanical [Ansys Mechanical Enterprise]
    Product Version:231
    Software build date:Sat Nov 26 20:15:28 2022




.. GENERATED FROM PYTHON SOURCE LINES 26-29

Output to a simple string
~~~~~~~~~~~~~~~~~~~~~~~~~
Run the script to get a simple string output.

.. GENERATED FROM PYTHON SOURCE LINES 29-40

.. code-block:: default


    output = mechanical.run_python_script(
        """
    def return_string():
        return "hello world"

    return_string()
    """
    )
    print(f"string output={output}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    string output=hello world




.. GENERATED FROM PYTHON SOURCE LINES 41-44

Output string output as JSON
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Run the script to get the string output as JSON.

.. GENERATED FROM PYTHON SOURCE LINES 44-61

.. code-block:: default


    output = mechanical.run_python_script(
        """
    def return_json():
        import json
        dict = {"value1": 100, "value2": 200}
        json_text = json.dumps(dict)
        return json_text

    return_json()
    """
    )
    print(f"json output={output}")

    my_dict = json.loads(output)
    print(f"Parsed json: value1={my_dict['value1']}, value2={my_dict['value2']}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    json output={"value2": 200, "value1": 100}
    Parsed json: value1=100, value2=200




.. GENERATED FROM PYTHON SOURCE LINES 62-65

Output string as CSV
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Run the script to get the string output as CSV.

.. GENERATED FROM PYTHON SOURCE LINES 65-78

.. code-block:: default


    output = mechanical.run_python_script(
        """
    def return_csv():
        return "1,2,3"

    return_csv()
    """
    )
    print(f"csv output={output}")
    csv_values = output.split(sep=",")
    print(f"Parsed csv: {';'.join(csv_values)}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    csv output=1,2,3
    Parsed csv: 1;2;3




.. GENERATED FROM PYTHON SOURCE LINES 79-82

Close Mechanical
~~~~~~~~~~~~~~~~
Close the Mechanical instance.

.. GENERATED FROM PYTHON SOURCE LINES 82-84

.. code-block:: default


    mechanical.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.175 seconds)


.. _sphx_glr_download_examples_gallery_examples_01_tips_n_tricks_example_01_run_python_script_output.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: example_01_run_python_script_output.py <example_01_run_python_script_output.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: example_01_run_python_script_output.ipynb <example_01_run_python_script_output.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
